tests/positive/issue2163/Main.juvix
module Main;

module B;
  import Stdlib.Prelude open;

  idNat : Nat -> Nat
    | x := x;
end;
