tests/negative/Internal/Positivity/E2.juvix
module E2;

import NegParam open;

type D :=
  | d : T D -> D;

